# babocar-logic

./: README.md
environment-builder/: CMakeLists.txt  package.xml
environment-builder/include/environment-builder/: absolute_map.hpp  dynamic_object.hpp  ros_convert.hpp  static_object.hpp
environment-builder/msg/: DynamicObject.msg  DynamicObjectArray.msg
environment-builder/src/: absolute_map.cpp  decomposer.cpp  dynamic_objects.cpp  ros_convert.cpp  static_points.cpp
local-planner/: CMakeLists.txt  package.xml
local-planner/include/local-planner/: collision.hpp  dynamic_window.hpp  trajectory.hpp  velocity_obstacle.hpp
local-planner/src/: collision.cpp  dynamic_window.cpp  local_obstacle_avoidance.cpp  trajectory.cpp  velocity_obstacle.cpp  vo_map_builder.cpp
local-planner/test/: collision.cpp  trajectory.cpp  velocity_obstacle.cpp
